# chumspeak-server

./: .gitignore  CMakeLists.txt  ChumSpeakConfig.h.in  Dockerfile  build.bat  build.sh  config.json  docker-entrypoint.sh  premake5.lua  run.bat  run.sh  server.cpp
src/: Channel.h  Client.h  Config.cpp  Config.h  Listeners.cpp  Listeners.h  Log.h  Server.cpp  Server.h  Utils.cpp  Utils.h  main.cpp
ts3_sdk_3.0.4.4/examples/client/: identity.txt  soundbackends  ts3_client_sample
ts3_sdk_3.0.4.4/examples/client_minimal/: soundbackends
ts3_sdk_3.0.4.4/examples/server/: keypair_9987.txt  ts3_server_sample
